--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="icon" type="image/ico" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:400,500,600,700,900|PT+Sans+Caption:400,700|Roboto:300,400,500,600,700|Vidaloka&amp;subset=cyrillic-ext,latin-ext"
           rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/base.css"> <!--ALL PAGES-->
     <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/style.css"><!--ALL PAGES-->
     <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/responsive.css"><!--ALL PAGES-->
@@ -37,9 +36,7 @@
             <router-link to="/eda" class="col-md col-12" data-id="14" style="color:#000">
                 Еда
             </router-link>
-            <router-link to="/all" class="col-md col-12" data-id="12,11,10,13,14" style="color:#000">
-                все
-            </router-link>
+
         </div>
     </div>
     <router-view></router-view>
@@ -52,8 +49,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gijgo/1.9.6/combined/js/gijgo.min.js "></script>
 <script src="https://45.j2landing.com/DrugStoreMap/js/ds_map.js"></script>
 <script src="https://45.j2landing.com/DrugStoreMap/js/map.js"></script>
-
-<script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKFztHzVA7_L75JrTwyrzhk2asYAWUL7I&amp;callback=initMap" type="text/javascript"></script>
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyC6eYPVrcBB2xUKn26N_oW7756dny5hgXo&libraries=places&language=ru&region=Ru"
+></script>
 
 </body>
 </html>
