fixed map + city

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <router-link to="/eda" class="col-md col-12" data-id="14" style="color:#000">
                 Еда
             </router-link>
-
+            <router-link to="/shchgshshchgshshchg" class="col-md col-12" data-id="14" style="color:#000">
+                shchgshshchgshshchg
+            </router-link>
         </div>
     </div>
     <router-view></router-view>
