comments + pyatnica last

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/base.css"> <!--ALL PAGES-->
     <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/style.css"><!--ALL PAGES-->
+    <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/main-page.css"><!--ALL PAGES-->
+    <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/club.css"><!--ALL PAGES-->
     <link rel="stylesheet" href="https://45.j2landing.com/DrugStoreMap/css/responsive.css"><!--ALL PAGES-->
 
 
