--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <router-link to="/eda" class="col-md col-12" data-id="14" style="color:#000">
                 Еда
             </router-link>
+            <router-link to="/igry" class="col-md col-12" data-id="14" style="color:#000">
+                игра
+            </router-link>
 
         </div>
     </div>
@@ -45,6 +48,8 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+<script src="https://sova.j2landing.com/js/objects_ru.js"></script>
+<script src="https://sova.j2landing.com/js/lang_ru.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gijgo/1.9.6/combined/js/gijgo.min.js "></script>
